--- a/.github/workflows/python-test-ubuntu.yml
+++ b/.github/workflows/python-test-ubuntu.yml
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  lint:
 
     runs-on: ubuntu-latest
 
@@ -34,4 +34,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        # No tests currently
+        #pytest
