--- a/.github/workflows/python-pyinstaller-windows.yml
+++ b/.github/workflows/python-pyinstaller-windows.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         name: ${{ env.ARCHIVE_NAME }}
         path: |
-          dist/*.zip
+          dist/${{ env.ARCHIVE_NAME }}.zip
 
     - name: Publish release
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -63,4 +63,4 @@ jobs:
         prerelease: true
         title: "Automatic Build"
         files: |
-          ${{ env.ARCHIVE_NAME }}.zip
+          dist/${{ env.ARCHIVE_NAME }}.zip
