--- a/.github/workflows/python-pyinstaller-windows.yml
+++ b/.github/workflows/python-pyinstaller-windows.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Set short commit hash variable
       run: |
-        Write-Host "SHORT_SHA=$(${Env:GITHUB_SHA}.Substring(0, 7))" >> $Env:GITHUB_ENV
+        Write-Host "SHORT_SHA=$(${Env:GITHUB_SHA}.Substring(0, 7))" >> $Env:GITHUB_STATE
 
     - name: Show commit hash variable
       run: |
