--- a/.github/workflows/python-pyinstaller-windows-on-demand.yml
+++ b/.github/workflows/python-pyinstaller-windows-on-demand.yml
@@ -69,7 +69,7 @@ jobs:
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
+        automatic_release_tag: "ondemand"
         prerelease: true
         title: "Development Release ${{ env.SHORT_SHA }}"
         files: |
