--- a/.github/workflows/python-pyinstaller-multi-on-demand.yml
+++ b/.github/workflows/python-pyinstaller-multi-on-demand.yml
@@ -77,12 +77,12 @@ jobs:
     - name: Show PyInstaller warnings
       shell: pwsh
       run: |
-        if (Test-Path "build\${Env:BASE_NAME}\warn-${Env:BASE_NAME}.txt" -PathType Leaf)
+        if (Test-Path "build/${Env:BASE_NAME}/warn-${Env:BASE_NAME}.txt" -PathType Leaf)
         {
-          Get-Content 'build\${Env:BASE_NAME}\warn-${Env:BASE_NAME}.txt'
+          Get-Content 'build/${Env:BASE_NAME}/warn-${Env:BASE_NAME}.txt'
         }
 
-    - name: Zip EXE
+    - name: Zip executable
       shell: pwsh
       run: |
         cd dist
