--- a/.github/workflows/python-pyinstaller-multi-on-demand.yml
+++ b/.github/workflows/python-pyinstaller-multi-on-demand.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-latest
+          - macos-11
           - ubuntu-20.04
           - windows-latest
 
