Create dist dir beforehand.

--- a/.github/workflows/python-pyinstaller-docker-test.yml
+++ b/.github/workflows/python-pyinstaller-docker-test.yml
@@ -19,6 +19,9 @@ jobs:
 
     - uses: actions/checkout@v4
 
+    - name: Create dist directory
+      run: mkdir dist
+
     - name: Run PyInstaller via Docker
       uses: docker://fydeinc/pyinstaller
       with:
