--- a/.github/workflows/python-pyinstaller-docker-test.yml
+++ b/.github/workflows/python-pyinstaller-docker-test.yml
@@ -19,13 +19,10 @@ jobs:
 
     - uses: actions/checkout@v4
 
-    - name: Create dist directory
-      run: mkdir dist
-
     - name: Run PyInstaller via Docker
       uses: docker://fydeinc/pyinstaller
       with:
-        args: -v "$(pwd):/src" --name fansly_downloader_ng.py --onefile --console --noupx --icon:/src/resources/fansly_ng.ico
+        args: -v "${{ github.workspace }}:/src" --name fansly_downloader_ng.py --onefile --console --noupx --icon:/src/resources/fansly_ng.ico
 
     - name: Show dist contents
       run: ls -lhR
