--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-av>=9.0.0
-imagehash>=4.2.1
-loguru>=0.5.3
-m3u8>=3.0.0
-pillow>=8.4.0
-plyvel-ci>=1.5.0
-psutil>=5.9.0
-python-dateutil>=2.8.2
-requests>=2.26.0
-rich>=13.0.0
+av==11.0.0
+ImageHash==4.3.1
+loguru==0.7.2
+m3u8==3.6.0
+Pillow==10.1.0
+plyvel-ci==1.5.0
+psutil==5.9.6
+python-dateutil==2.8.2
+requests==2.31.0
+rich==13.7.0
