--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ av==11.0.0
 ImageHash==4.3.1
 loguru==0.7.2
 m3u8==3.6.0
+memory-profiler
 Pillow==10.1.0
 plyvel-ci==1.5.0
 psutil==5.9.6
+pyffmpeg
 python-dateutil==2.8.2
 requests==2.31.0
 rich==13.7.0
