--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-av==11.0.0
 ImageHash==4.3.1
 loguru==0.7.2
-m3u8==3.6.0
-memory-profiler
-Pillow==10.1.0
+m3u8==4.0.0
+memory-profiler==0.61.0
+pillow==10.2.0
 plyvel-ci==1.5.0
-psutil==5.9.6
-pyffmpeg
+psutil==5.9.8
+pyffmpeg==2.4.2.18.1
 python-dateutil==2.8.2
 requests==2.31.0
 rich==13.7.0
