--- a/config.sample.ini
+++ b/config.sample.ini
@@ -9,6 +9,7 @@ user_agent = ReplaceMe
 download_directory = Local_directory
 download_mode = Normal
 show_downloads = True
+show_skipped_downloads = True
 download_media_previews = True
 open_folder_when_finished = True
 separate_messages = True
