--- a/config.sample.ini
+++ b/config.sample.ini
@@ -10,6 +10,7 @@ download_directory = Local_directory
 download_mode = Normal
 show_downloads = True
 show_skipped_downloads = True
+minimize_output = False
 download_media_previews = True
 open_folder_when_finished = True
 separate_messages = True
