add video resolution enum

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -8,7 +8,7 @@ user_agent = ReplaceMe
 [Options]
 download_directory = Local_directory
 download_mode = Normal
-resolution = MAX
+resolution = 0
 show_downloads = True
 show_skipped_downloads = True
 minimize_output = False
