--- a/config.sample.ini
+++ b/config.sample.ini
@@ -8,6 +8,7 @@ user_agent = ReplaceMe
 [Options]
 download_directory = Local_directory
 download_mode = Normal
+resolution = 0
 show_downloads = True
 show_skipped_downloads = True
 download_media_previews = True
