--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,13 +1,15 @@
 [TargetedCreator]
-username = ReplaceMe
+username = replaceme
 
 [MyAccount]
 authorization_token = ReplaceMe
 user_agent = ReplaceMe
+check_key = qybZy9-fyszis-bybxyf
 
 [Options]
 download_directory = Local_directory
 download_mode = Normal
+metadata_handling = Advanced
 show_downloads = True
 show_skipped_downloads = True
 download_media_previews = True
@@ -19,4 +21,11 @@ use_duplicate_threshold = False
 use_folder_suffix = True
 interactive = True
 prompt_on_exit = True
-metadata_handling = Advanced
+timeline_retries = 1
+timeline_delay_seconds = 60
+
+[Cache]
+
+[Logic]
+check_key_pattern = this\.checkKey_\s*=\s*["']([^"']+)["']
+main_js_pattern = \ssrc\s*=\s*"(main\..*?\.js)"
